Changelog for s6.

In 2.13.0.1
-----------

 - Bugfixes.


In 2.13.0.0
-----------

 - Bugfixes.
 - s6-svstat -o pgid (or -g) prints the service's pgid
 - s6-supervise now passes the service's pgid to ./finish
 - New s6-svc -P/-C/-K sends SIGSTOP, SIGCONT or SIGKILL to
the service's process group.


In 2.12.0.4
-----------

 - Bugfixes.


In 2.12.0.3
-----------

 - Bugfixes.


In 2.12.0.2
-----------

 - Bugfixes.


In 2.12.0.1
-----------

 - Bugfixes.


In 2.12.0.0
-----------

 - New option to s6-svc: -s, to specify a signal by name (or number).
 - New option to s6-log: -t, to specify a timeout for partial last lines.
 - s6-svscan rewrite: no more quadratic reaps, no more forced 1s wait on shutdown
 - Eliminated fork() wherever possible on systems supporting posix_spawn()
 - Obsolete s6lockd subsystem removed.


In 2.11.3.2
-----------

 - Dependency fixes.


In 2.11.3.1
-----------

 - Resource limit shenanigans.


In 2.11.3.0
-----------

 - Bugfixes.
 - Internal changes to instances and servicedir reserved names.
 - New s6-svc -Q command.
 - -0167 options to s6-ioconnect are now deprecated.


In 2.11.2.0
-----------

 - Adaptation to skalibs-2.13.0.0.
 - Bugfixes.
 - New s6-svc -D and s6-svc -U commands.
 - The name of the service is now passed as an argument to ./run and
as the third argument to ./finish.
 - The 1-second service restart delay can now only be skipped when
the service is ready.
 - New s6-log directive: p, to set a log line prefix.
 - Implementation of instances! New programs: s6-instance-maker,
s6-instance-create, s6-instance-delete, s6-instance-control,
s6-instance-status, s6-instance-list.


In 2.11.1.2
-----------

 - Bugfixes.


In 2.11.1.1
-----------

 - Adaptation to skalibs-2.12.0.0.


In 2.11.1.0
-----------

 - Bugfixes.
 - s6-applyuidgid and s6-setuidgid can now be used by non-root users.
 - New s6-envdir option: -L, for unlimited size environment variables.


In 2.11.0.1
-----------

 - Bugfixes.


In 2.11.0.0
-----------
