@@ -6,11 +6,11 @@ Build Instructions
 
   - A POSIX-compliant C development environment
   - GNU make version 3.81 or later
-  - skalibs version 2.14.2.1 or later: https://skarnet.org/software/skalibs/
-  - Recommended: execline version 2.9.6.0 or later: https://skarnet.org/software/execline/
+  - skalibs version 2.14.3.0 or later: https://skarnet.org/software/skalibs/
+  - Recommended: execline version 2.9.6.1 or later: https://skarnet.org/software/execline/
     (You can disable this requirement at configure time, but will
     lose some functionality.)
-  - Optional: nsss version 0.2.0.4 or later: https://skarnet.org/software/nsss/
+  - Optional: nsss version 0.2.0.5 or later: https://skarnet.org/software/nsss/
 
  This software will run on any operating system that implements
 POSIX.1-2008, available at:
@@ -24,13 +24,7 @@ POSIX.1-2008, available at:
 
  will work for most users.
  It will install the binaries in /bin and the static libraries in
-/usr/lib/s6.
-
- Please note that static libraries in /usr/lib/s6 *will not*
-be found by a default linker invocation: you need -L/usr/lib/s6.
-Other skarnet.org software automatically handles that case if the
-default configuration is used, but if you change the configuration,
-remember to use the appropriate --with-lib configure option.
+/usr/lib.
 
  You can strip the binaries and libraries of their extra symbols via
 "make strip" before the "make install" phase. It will shave a few bytes
