@@ -83,12 +83,12 @@ with s6</a> </li>
  <li> A POSIX-compliant system with a standard C development environment </li>
  <li> GNU make, version 3.81 or later </li>
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a> version
-2.14.2.1 or later. It's a build-time requirement. It's also a run-time
+2.14.3.0 or later. It's a build-time requirement. It's also a run-time
 requirement if you link against the shared version of the skalibs
 library. </li>
  <li> (Optional, but really recommended for full functionality):
 <a href="//skarnet.org/software/execline/">execline</a> version
-2.9.6.0 or later. When s6 is built with execline support (which is the default),
+2.9.6.1 or later. When s6 is built with execline support (which is the default),
 execline is a build-time requirement, and also a run-time requirement for
 certain binaries that spawn scripts interpreted with
 <a href="//skarnet.org/software/execline/execlineb.html">execlineb</a>. </li>
@@ -102,7 +102,7 @@ certain binaries that spawn scripts interpreted with
  <li> If you're using <a href="https://www.musl-libc.org/">musl</a> and
 want nsswitch-like functionality:
 <a href="//skarnet.org/software/nsss/">nsss</a> version
-0.2.0.4 or later (build-time and boot-time) </li>
+0.2.0.5 or later (build-time and boot-time) </li>
 </ul>
 
 <h3> Licensing </h3>
