@@ -22,7 +22,12 @@
 
 <ul>
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a>
-dependency bumped to 2.14.2.1. </li>
+dependency bumped to 2.14.3.0. </li>
+ <li> <a href="//skarnet.org/software/nsss/">nsss</a>
+optional dependency bumped to 0.2.0.5. </li>
+ <li> <a href="//skarnet.org/software/execline/">execline</a>
+recommended dependency bumped to 2.9.6.1. </li>
+ <li> Static libraries are installed in <tt>/usr/lib</tt> by default. </li>
 </ul>
 
 <h2> in 2.13.0.0 </h2>
